fix the bug where the avatar may be stretched

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,7 @@ a {
 
 .profile {
   display: flex;
-  align-items: stretch;
+  align-items: center;
   justify-content: center;
   margin-top: 60px;
   scroll-margin-top: 60px;
